# LoginAutomation

./: .gitignore  MANIFEST.in  README.md  config.ini  config.py  driver.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
conda_recipe/: environment.yaml  meta.yaml
login_automation/: __init__.py
login_automation/constants/: constants.py  indeed.py  linkedin.py
login_automation/login/: factory.py  indeed.py  linkedin.py  login.py  manual.py
src/: __init__.py
src/constants/: constants.py  linkedin.py
src/login/: factory.py  linkedin.py  login.py
tests/: conftest.py  test_factory.py  test_login.py  test_manual.py
